Walkingがなぜか動くようになった

--- a/api.html
+++ b/api.html
@@ -18,6 +18,8 @@
 			
 			GEvent.addListener(gdir, "load", onGDirectionsLoad);
 			GEvent.addListener(gdir, "error", handleErrors);
+
+	//loadDirections("東京駅","大阪駅",{locale:"ja_JP",travelMode:G_TRAVEL_MODE_WALKING});
 		}
 	}
 
@@ -71,8 +73,7 @@
 
 	}
  
-    //initialize();
-    //loadDirections("東京駅","大阪駅",{locale:"ja_JP"});
+
 	</script>
         
 	</head>
